--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-<div class="mytitle"><h1>人生最高の映画</h1>
+<div class="mytitle"><h1>ここで変更できます</h1>
     <button>映画記録</button>
 </div>
 <div class="mypost">
